--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,69 @@
+header {
+  height: 10vh;
+  margin: 0;
+  background-color: #070c11;
+  color: #fff;
+  text-align: center;
+  padding-top: 10px;
+}
 
+#cases {
+  min-height: 90vh;
+  padding-bottom: 50px;
+  background-color: #202224;
+  color: rgb(177, 177, 177);
+}
 
+#cases h1,
+h2 {
+  padding: 10px;
+}
+
+#cases h4 {
+  padding-top: 25px;
+}
+
+#cases h1,
+h4 {
+  text-align: center;
+}
+
+.cases-wrapper {
+  width: 80%;
+  margin: auto;
+}
+
+.today {
+  padding-top: 40px;
+}
+
+.box-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+}
+
+.box {
+  background-color: #0f0e0e;
+  height: 20vh;
+  width: 30%;
+  margin: 15px;
+  border-radius: 10px;
+}
+
+footer {
+  height: 10vh;
+  margin: 0;
+  background-color: #070c11;
+  color: #fff;
+  text-align: center;
+  padding-top: 10px;
+  -webkit-box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
+}
+
+footer a {
+  text-decoration: none;
+  color: inherit;
+}
