--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 header {
-  height: 10vh;
+  min-height: 10vh;
   margin: auto;
   background-color: #070c11;
   color: #fff;
@@ -40,11 +40,11 @@ header {
 
 #cases h1,
 h2 {
-  padding: 10px;
+  padding: 15px;
 }
 
 #cases h4 {
-  padding-top: 25px;
+  padding-top: 30px;
 }
 
 #cases h1,
@@ -94,4 +94,28 @@ footer a {
 
 footer p {
   margin-top: 5px;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  header {
+    color: yellow;
+  }
+  .box {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 200px) {
+  .box {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    width: 80%;
+    justify-content: center;
+    margin: auto;
+    margin-top: 15px;
+  }
+  h2,
+  p {
+    text-align: center;
+  }
 }
