--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,9 @@ footer p {
     margin: auto;
     margin-top: 15px;
   }
+  #PH {
+    font-size: 40px;
+  }
   h2,
   p {
     text-align: center;
