--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,6 @@ h4 {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
-  padding: 20px;
   align-items: center;
 }
 
@@ -149,15 +148,21 @@ h4 {
   align-items: center;
 }
 
+.twitter {
+  border-radius: 5px;
+  -webkit-box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.5);
+}
+
 footer {
   min-height: 10vh;
-  margin: 0;
   background-color: #070c11;
   color: #fff;
   text-align: center;
   padding-top: 10px;
   -webkit-box-shadow: 5px 5px 15px 5px #000000;
   box-shadow: 5px 5px 15px 5px #000000;
+  font-size: 12px;
 }
 
 footer a {
@@ -172,6 +177,16 @@ footer p {
 @media screen and (max-width: 1024px) and (min-width: 769px) {
   .box {
     width: 45%;
+  }
+  .twitters {
+    flex-direction: column;
+    padding: 20px;
+  }
+  .twitter {
+    margin-bottom: 20px;
+  }
+  footer {
+    font-size: 15px;
   }
 }
 
@@ -190,5 +205,23 @@ footer p {
   h2,
   p {
     text-align: center;
+  }
+  .pmeasure {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .p-text h4 {
+    text-align: center;
+  }
+  .twitters {
+    flex-direction: column;
+    padding: 20px;
+  }
+  .twitter {
+    margin-bottom: 20px;
+  }
+  footer {
+    font-size: 10px;
   }
 }
