--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ h4 {
 
 .box {
   background-color: #0f0e0e;
-  height: 20vh;
+  height: 130px;
   width: 30%;
   margin: 15px;
   border-radius: 10px;
@@ -194,7 +194,7 @@ footer p {
   .box {
     flex-wrap: nowrap;
     flex-direction: column;
-    width: 80%;
+    width: 90%;
     justify-content: center;
     margin: auto;
     margin-top: 15px;
